--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
     <p>paragraph</p>
+    <h1>New h tag</h1>
   </head>
   <body></body>
 </html>
